# hint-book-eval

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: add-case.md  generate-hints.md  review.md  run-loop.md  status.md
agents/: grade-grader.md  grader-improver.md  grader-native.md  grader.md  hint-evaluator-run.md  hint-evaluator.md  hint-generator-run.md  hint-generator.md  hintbook-generator-agent.md  hintbook-generator-grader-agent.md  hintbook-generator-improver-agent.md  hintbook-generator-patcher-agent.md  prompt-improver-native.md  prompt-improver.md  runner-native.md  runner.md
cases/generation/: ca-dl-gen.json  fl-dl-gen.json  ny-dl-gen.json  tx-dl-gen.json  us-passport-card-gen.json  us-passport-gen.json
hints/: ca_dl.json  california_driver_license_gen_3_real_id-v1.json  california_driver_license_gen_3_real_id.json
memory/: hint-scores.json  scores.json
prompts/assessment/: v1.md
prompts/generation/: v1.md  v2.md  v3.md  v4.md
rubrics/assessment/: v1.md
rubrics/generation/: v1.md  v2.md  v3.md
tools/: build_messages.py  common.py  grade.py  improve_grader.py  improve_prompt.py  record_hint_score.py  run_case.py  sample.py  save_grade.py  save_hint_eval.py  save_hint_version.py  save_hints.py  save_prompt.py  save_run.py
